--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1130,7 +1130,7 @@ Vores testdeltagere kom ikke kun fra Reddit, men også fra opslag på vores Face
 
 Det er førhen blevet påvist, at folk der spiller computer vil være hurtigere til at gennemføre opgaverne \cite{wyeld2013}. I vores undersøgelse er dette også tilfældet, da tabel \ref{tab:times_average} viser at gennemsnitstiderne for at gennemføre en opgave falder desto mere computer deltageren spiller.
 
-Ligeledes kan der være en væsentlig forskel på tiden, alt efter om testpersonen bruger mus eller touchpad \cite{epps1986}. I vores data brugte 160 testdeltagere mus, imens 96 brugte touchpad. I følge \cite{epps1986} ville dette betyde en forskel i de indbyrdes tider og derved også mindre sammenhæng i dataene. Dette kan medføre et dårligere resultat når vi forsøger at tilpasse vores modeller til hele datasættet. Det kunne derfor have været relevant at foretage en analyse af hhv. mus og touchpad brugere, hver for sig.
+Ligeledes kan der være en væsentlig forskel på tiden, alt efter om testpersonen bruger mus eller touchpad \cite{epps1986}. I vores data brugte 160 testdeltagere mus, imens 96 brugte touchpad. I følge \cite{epps1986} ville dette betyde en forskel i de indbyrdes tider og derved også mindre sammenhæng i dataene. Dette kan medføre et dårligere resultat når vi forsøger at tilpasse vores modeller til hele datasættet. Det kunne derfor have været relevant at foretage en analyse af henholdsvis musse- og touchpadbrugere, hver for sig.
 
 \addcontentsline{toc}{section}{Analyse}
 \section*{Analyse}
