--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1135,7 +1135,7 @@ Ligeledes kan der være en væsentlig forskel på tiden, alt efter om testperson
 \addcontentsline{toc}{section}{Analyse}
 \section*{Analyse}
 % Diskussion af AIC
-Analysen af pegeopgaverne viste, at Meyer's formulering beskrev vores indsamlede data bedst, da den havde en AIC-værdi på 92728.38 for alle personers pegeopgaver. Dette var 34.64 mindre end AIC-værdien for MacKenzie's formulering, som viste sig at være den næstbedste formulering. Herefter fulgte AIC-værdien for Fitts' formulering som var 75.79 større end selvsamme for Meyer's formulering. Den formulering som passede vores data dårligst var Welford's, den havde den højeste AIC-værdi og var 1781.96 større end selvsamme for Meyer's formulering. For at kunne sige, at to modeller passer den indsamlede data lige godt, så skal forskellen mellem dem være under to \cite{burnham2004}. Hvis de måske passer den indsamlede data lige godt, så skal forskellen mellem dem være mellem fire og syv \cite{burnham2004}. Hvis de ikke passer dataen lige godt, så vil forskellen ligge over 10 \cite{burnham2004}. Forskellene mellem Meyer's formulering og de tre andre er alle større end 10. Vi kan derfor sige at Meyer's er den formulering som passer vores data bedst, da den har den mindste AIC-værdi.
+Analysen af pegeopgaverne viste, at Meyer's formulering beskrev vores indsamlede data bedst, da den havde en AIC-værdi på $92728.38$ for alle personers pegeopgaver. Dette var $34.64$ mindre end AIC-værdien for MacKenzie's formulering, som viste sig at være den næstbedste formulering. Herefter fulgte AIC-værdien for Fitts' formulering som var $75.79$ større end selvsamme for Meyer's formulering. Den formulering som passede vores data dårligst var Welford's, den havde den højeste AIC-værdi og var $1781.96$ større end selvsamme for Meyer's formulering. For at kunne sige, at to modeller passer den indsamlede data lige godt, så skal forskellen mellem dem være under to \cite{burnham2004}. Hvis de måske passer den indsamlede data lige godt, så skal forskellen mellem dem være mellem fire og syv \cite{burnham2004}. Hvis de ikke passer dataen lige godt, så vil forskellen ligge over 10 \cite{burnham2004}. Forskellene mellem Meyer's formulering og de tre andre er alle større end 10. Vi kan derfor sige at Meyer's er den formulering som passer vores data bedst, da den har den mindste AIC-værdi.
 
 Vi valgte også at lave AIC-analyse af alle opgaver for 10 tilfældige personer. Her var resultaterne mere varierede, men Meyer's formulering havde den laveste AIC-værdi ved syv ud af de 10 testdeltagere. MacKenzie's formulering havde den laveste ved to ud af de 10 testdeltagere, mens Welford's formulering havde den laveste værdi ved en af testdeltagerne. Der var en generel tendens til at forskellene mellem Meyer's formulering, MacKenzie's formulering og Fitts' formulering lå under to, hvilket betyder at de passer lige godt for dataen for enkeltpersoner. Welford's var lidt mere blandet. Her var en af forskellene under to, seks var mellem to og 10 og to var over 10. Det tyder altså på at Welford's formulering på enkeltpersonerne måske passer lige så godt på dataen som de fire andre, men at vi ikke kan være sikre på dette.
 
