--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1137,7 +1137,7 @@ Ligeledes kan der være en væsentlig forskel på tiden, alt efter om testperson
 % Diskussion af AIC
 Analysen af pegeopgaverne viste, at Meyer's formulering beskrev vores indsamlede data bedst, da den havde en AIC-værdi på $92728.38$ for alle personers pegeopgaver. Dette var $34.64$ mindre end AIC-værdien for MacKenzie's formulering, som viste sig at være den næstbedste formulering. Herefter fulgte AIC-værdien for Fitts' formulering som var $75.79$ større end selvsamme for Meyer's formulering. Den formulering, som tilpassede vores data dårligst var Welford's. Den havde den højeste AIC-værdi og var $1781.96$ større end selvsamme for Meyer's formulering. For at kunne sige, at to modeller passer den indsamlede data lige godt, så skal forskellen mellem dem være under to \cite{burnham2004}. Hvis de måske passer den indsamlede data lige godt, så skal forskellen mellem dem være mellem fire og syv \cite{burnham2004}. Hvis de ikke passer dataene lige godt, så vil forskellen ligge over 10 \cite{burnham2004}. Forskellene mellem Meyer's formulering og de tre andre er alle større end 10. Vi kan derfor sige at Meyer's er den formulering som passer vores data bedst, da den har den mindste AIC-værdi.
 
-Vi valgte også at lave AIC-analyse af alle opgaver for 10 tilfældige personer. Her var resultaterne mere varierede, men Meyer's formulering havde den laveste AIC-værdi ved syv ud af de 10 testdeltagere. MacKenzie's formulering havde den laveste ved to ud af de 10 testdeltagere, mens Welford's formulering havde den laveste værdi ved en af testdeltagerne. Der var en generel tendens til at forskellene mellem Meyer's, MacKenzie's og Fitts' formulering lå under to, hvilket betyder at de passer lige godt for dataene for enkeltpersoner. Forskellen i AIC-værdien for Welford's formulering i forhold til de andre tre var varierende. Men der var en generel tendens til, at de var imellem to og 10. Det tyder altså på at Welford's formulering på enkeltpersonerne måske passer lige så godt på dataene som de fire andre, men at vi ikke kan være sikre på dette.
+Vi valgte også at lave AIC-analyse af alle opgaver for 10 tilfældige personer. Her var resultaterne mere varierede, men Meyer's formulering havde den laveste AIC-værdi ved syv ud af de 10 testdeltagere. MacKenzie's formulering havde den laveste ved to ud af de 10 testdeltagere, mens Welford's formulering havde den laveste værdi ved en af testdeltagerne. Der var en generel tendens til at forskellene mellem Meyer's, MacKenzie's og Fitts' formulering lå under to, hvilket betyder at de passer lige godt for dataene for enkeltpersoner. Forskellene i AIC-værdien for Welford's formulering i forhold til de andre tre var varierende. Men der var en generel tendens til, at de var imellem to og 10. Det tyder altså på at Welford's formulering på enkeltpersonerne måske passer lige så godt på dataene som de fire andre, men at vi ikke kan være sikre på dette.
 
 For at understøtte vores AIC-analyse lavede vi også en analyse af residualplots. På residualplottene var det tydeligt at se at Meyer's formulering var den som passede bedst på den indsamlede data, da dens smoothing-linje generelt var nærmest nul-linjen og dens residualer lå mest tilfældigt omkring nul-linjen. MacKenzie's og Fitts' formulering lignede hinanden rigtig meget og vi kan derfor ikke se hvilken af dem der vil være næst- og tredjebedst. Det er dog klart ud fra residualplottene, at Welfold's formulering er den som passer dårligst på dataene, da smoothing-linjen ligger længere fra nul-linjen og residualplottene ikke ligger tilfældigt omkring nul-linjen. Residualplottene følger altså vores AIC-analyse, idet Meyer's formulering er den bedste og Welford's er den dårligste. Det er dog svært at sige om Fitts' og MacKenzie's formulering ligger tæt nok på Meyer's til at de passer lige så godt på dataene, hvilket vores AIC-analyse til gengæld klart kunne svare på at de ikke gjorde for alle deltagere.
 
