--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1139,7 +1139,7 @@ Analysen af pegeopgaverne viste, at Meyer's formulering beskrev vores indsamlede
 
 Vi valgte også at lave AIC-analyse af alle opgaver for 10 tilfældige personer. Her var resultaterne mere varierede, men Meyer's formulering havde den laveste AIC-værdi ved syv ud af de 10 testdeltagere. MacKenzie's formulering havde den laveste ved to ud af de 10 testdeltagere, mens Welford's formulering havde den laveste værdi ved en af testdeltagerne. Der var en generel tendens til at forskellene mellem Meyer's, MacKenzie's og Fitts' formulering lå under to, hvilket betyder at de passer lige godt for dataene for enkeltpersoner. Forskellene i AIC-værdien for Welford's formulering i forhold til de andre tre var varierende. Men der var en generel tendens til, at de lå mellem to og 10. Det tyder på at Welford's formulering for enkeltpersonerne måske passer lige så godt på dataene som de fire andre, men at vi ikke kan være sikre på dette.
 
-For at understøtte vores AIC-analyse lavede vi også en analyse af residualplots. På residualplottene var det tydeligt at se, at Meyer's formulering var den som passede bedst på den indsamlede data, da dens smoothing-linje generelt var nærmest nul-linjen og dens residualer lå mest tilfældigt omkring nul-linjen. MacKenzie's og Fitts' formulering ligner hinanden rigtig meget og vi kan derfor ikke se hvilken af dem der vil være næst- og tredjebedst. Det er dog klart ud fra residualplottene, at Welfold's formulering er den som passer dårligst på dataene, da smoothing-linjen ligger længere fra nul-linjen og residualplottene ikke ligger tilfældigt omkring nul-linjen. Residualplottene følger altså vores AIC-analyse, idet Meyer's formulering er den bedste og Welford's er den dårligste. Det er dog svært at sige om Fitts' og MacKenzie's formulering ligger tæt nok på Meyer's til at de passer lige så godt på dataene, hvilket vores AIC-analyse til gengæld klart kunne svare på at de ikke gjorde for alle deltagere.
+For at understøtte vores AIC-analyse lavede vi også en analyse af residualplots. På residualplottene i figur\ref{images/plots/plot_residual_fitt}-\ref{images/plots/plot_residual_meyer} var det tydeligt at se, at Meyer's formulering var den som passede bedst på den indsamlede data, da dens smoothing-linje generelt var nærmest nul-linjen og dens residualer lå mest tilfældigt omkring nul-linjen. MacKenzie's og Fitts' formulering ligner hinanden rigtig meget og vi kan derfor ikke se hvilken af dem der vil være næst- og tredjebedst. Det er dog klart ud fra residualplottene, at Welfold's formulering er den som passer dårligst på dataene, da smoothing-linjen ligger længere fra nul-linjen og residualplottene ikke ligger tilfældigt omkring nul-linjen. Residualplottene følger altså vores AIC-analyse, idet Meyer's formulering er den bedste og Welford's er den dårligste. Det er dog svært at sige om Fitts' og MacKenzie's formulering ligger tæt nok på Meyer's til at de passer lige så godt på dataene, hvilket vores AIC-analyse til gengæld klart kunne svare på at de ikke gjorde for alle deltagere.
 
 I vores analyse fandt vi frem til værdien af $a$ og $b$ i hver af de fire formuleringer for alle testpersoners pegeopgaver. De tre værdier af $a$ beskriver den tid det vil tage for en person at påbegynde opgaven. Denne ligger mellem cirka $400$ og $500$ millisekunder, hvilket også passer med hvad \cite{crossman1957} og \cite{welford1968} tidligere har fundet frem til. Det multiplikative led, $b$, beskriver hvor meget længere tid brugeren ville bruge på en opgave, hvis opgavens $ID$ bliver 1 større. Dette led ligger for Fitts', MacKenzie's og Meyer's omkring $150-200$, mens det for Welford's ligger omkring $300$. Grunden til at Welford's multiplikative led ligger højere er, at Welford's formulering ikke har det additive led og derfor vil den skulle stige mere, for at passe nogenlunde på vores data.
 
