--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1141,7 +1141,7 @@ Vi valgte også at lave AIC-analyse af alle opgaver for 10 tilfældige personer.
 
 For at understøtte vores AIC-analyse lavede vi også en analyse af residualplots. På residualplottene i figur \ref{fig:plot_residual_fitt}-\ref{fig:plot_residual_meyer} var det tydeligt at se, at Meyer's formulering var den som passede bedst på den indsamlede data, da dens smoothing-linje generelt var nærmest nul-linjen og dens residualer lå mest tilfældigt omkring nul-linjen. MacKenzie's og Fitts' formulering ligner hinanden rigtig meget og vi kan derfor ikke se hvilken af dem der vil være næst- og tredjebedst. Det er dog klart ud fra residualplottene, at Welfold's formulering er den som passer dårligst på dataene, da smoothing-linjen ligger længere fra nul-linjen og residualplottene ikke ligger tilfældigt omkring nul-linjen. Residualplottene følger altså vores AIC-analyse, idet Meyer's formulering er den bedste og Welford's er den dårligste. Det er dog svært at sige om Fitts' og MacKenzie's formulering ligger tæt nok på Meyer's til at de passer lige så godt på dataene, hvilket vores AIC-analyse til gengæld klart kunne svare på at de ikke gjorde for alle deltagere.
 
-I vores analyse fandt vi frem til værdien af $a$ og $b$ i hver af de fire formuleringer for alle testpersoners pegeopgaver. De tre værdier af $a$ beskriver den tid det vil tage for en person at påbegynde opgaven. Denne ligger mellem cirka $400$ og $500$ millisekunder, hvilket også passer med hvad \cite{crossman1957} og \cite{welford1968} tidligere har fundet frem til. Det multiplikative led, $b$, beskriver hvor meget længere tid brugeren ville bruge på en opgave, hvis opgavens $ID$ bliver 1 større. Dette led ligger for Fitts', MacKenzie's og Meyer's omkring $150-200$, mens det for Welford's ligger omkring $300$. Grunden til at Welford's multiplikative led ligger højere er, at Welford's formulering ikke har det additive led og derfor vil den skulle stige mere, for at passe nogenlunde på vores data.
+I vores analyse fandt vi frem til værdien af $a$ og $b$ i hver af de fire formuleringer for alle testpersoners pegeopgaver. De tre værdier af $a$ beskriver den tid det vil tage for en person at påbegynde opgaven. Denne ligger mellem cirka $400$ og $500$ millisekunder, hvilket også passer med hvad \cite{crossman1957} og \cite{welford1968} tidligere har fundet frem til. Det multiplikative led, $b$, beskriver hvor meget længere tid testdeltageren vil bruge på en opgave, hvis opgavens $ID$ bliver én større. Dette led ligger for Fitts', MacKenzie's og Meyer's omkring $150-200$, mens det for Welford's ligger omkring $300$. Grunden til at Welford's multiplikative led ligger højere er, at Welford's formulering ikke har det additive led og derfor vil den skulle stige mere, for at passe nogenlunde på vores data.
 
 Da vores pegeopgaver er en reproducering af tidligere udførte forsøg i \cite{goldberg2015}, så vil vi sammenligne vores resultater med deres. Vi fandt, i vores analyse, at Meyer's formulering var den, som tilpassede vores data bedst, ved alle testdeltageres pegeopgaver. \cite{goldberg2015} fandt frem til, at MacKenzie's formulering er den som generelt tilpasser deres data bedst. Vi har derfor ikke kunne reproducere resultaterne som de fandt frem til i \cite{goldberg2015}, på trods af, at vi har reproduceret deres pegeopgave. Der kan derfor stilles spørgsmålstegn ved rigtigheden af resultaterne i \cite{goldberg2015}.
 
