--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1143,7 +1143,7 @@ For at understøtte vores AIC-analyse lavede vi også en analyse af residualplot
 
 I vores analyse fandt vi frem til værdien af $a$ og $b$ i hver af de fire formuleringer for alle testpersoners pegeopgaver. De tre værdier af $a$ beskriver den tid det vil tage for en person at påbegynde opgaven. Denne ligger mellem cirka $400$ og $500$ millisekunder, hvilket også passer med hvad \cite{crossman1957} og \cite{welford1968} tidligere har fundet frem til. Det multiplikative led, $b$, beskriver hvor meget længere tid testdeltageren vil bruge på en opgave, hvis opgavens $ID$ bliver én større. Dette led ligger for Fitts', MacKenzie's og Meyer's omkring $150-200$, mens det for Welford's ligger omkring $300$. Grunden til at Welford's multiplikative led ligger højere er, at Welford's formulering ikke har det additive led og derfor vil den skulle stige mere, for at passe nogenlunde på vores data.
 
-Da vores pegeopgaver er en reproducering af tidligere udførte forsøg i \cite{goldberg2015}, så vil vi sammenligne vores resultater med deres. Vi fandt, i vores analyse, at Meyer's formulering var den, som tilpassede vores data bedst, ved alle testdeltageres pegeopgaver. \cite{goldberg2015} fandt frem til, at MacKenzie's formulering var den, som generelt tilpassede deres data bedst. Vi har derfor ikke kunne reproducere resultaterne som de fandt frem til i \cite{goldberg2015}, på trods af, at vi har reproduceret deres pegeopgave. Der kan derfor stilles spørgsmålstegn ved rigtigheden af resultaterne i \cite{goldberg2015}.
+Da vores pegeopgaver er en reproducering af tidligere udførte forsøg i \cite{goldberg2015}, så vil vi sammenligne vores resultater med deres. Vi fandt, i vores analyse, at Meyer's formulering var den, som tilpassede vores data bedst, ved alle testdeltageres pegeopgaver. \cite{goldberg2015} fandt frem til, at MacKenzie's formulering var den, som generelt tilpassede deres data bedst. Vi har derfor ikke kunne reproducere resultaterne som de fandt frem til i \cite{goldberg2015}, på trods af, at vi har reproduceret deres pegeopgave. Der kan derfor sættes spørgsmålstegn ved korrektheden af resultaterne i \cite{goldberg2015}.
 
 % Fart diskussion
 Teorien om én primære underbevægelse efterfulgt af korrigerende underbevægelser, er som tidligere beskrevet, bekræftet af vores data. Selvom fartprofilerne vist i figur \ref{fig:speed_distance_testperson_140}-\ref{fig_speed_time_testperson_248} ikke har de samme afrundede og tydeligt distinkte kurver som \ref{fig:CrossmanFitt}, så stemmer vores data overens med Crossman og Goodeve's forklaring i \cite{crossman1983}. Vi har ydermere vist at fartprofilerne ofte udviser en eller flere korrigerende underbevægelser, hvilket også stemmer overens med \cite{crossman1983}. I modsætning hertil, så udviser hastighedsvektorerne ingen generelle tendenser og vi har ikke kunne bruge vektordataen til at beskrive eller forbedre Fitts' lov.
