--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1146,7 +1146,7 @@ I vores analyse fandt vi frem til værdien af $a$ og $b$ i hver af de fire formu
 Da vores pegeopgaver er en reproducering af tidligere udførte forsøg i \cite{goldberg2015}, så vil vi sammenligne vores resultater med deres. Vi fandt, i vores analyse, at Meyer's formulering var den, som tilpassede vores data bedst, ved alle testdeltageres pegeopgaver. \cite{goldberg2015} fandt frem til, at MacKenzie's formulering var den, som generelt tilpassede deres data bedst. Vi har derfor ikke kunne reproducere resultaterne som de fandt frem til i \cite{goldberg2015}, på trods af, at vi har reproduceret deres pegeopgave. Der kan derfor sættes spørgsmålstegn ved korrektheden af resultaterne i \cite{goldberg2015}.
 
 % Fart diskussion
-Teorien om én primær underbevægelse efterfulgt af korrigerende underbevægelser, er som tidligere beskrevet, bekræftet af vores data. Selvom fartprofilerne vist i figur \ref{fig:speed_distance_testperson_140}-\ref{fig:speed_time_testperson_248} ikke har de samme afrundede og tydeligt distinkte kurver som figur \ref{fig:CrossmanFitt}, så stemmer vores data overens med Crossman og Goodeve's forklaring i \cite{crossman1983}. Vi har ydermere vist at fartprofilerne ofte udviser en eller flere korrigerende underbevægelser, hvilket også stemmer overens med \cite{crossman1983}. I modsætning hertil, så udviser hastighedsvektorerne ingen generelle tendenser og vi har ikke kunne bruge vektordataen til at beskrive eller forbedre Fitts' lov.
+Teorien om én primær underbevægelse efterfulgt af korrigerende underbevægelser, er som tidligere beskrevet, bekræftet af vores data. Selvom fartprofilerne vist i figur \ref{fig:speed_distance_testperson_140}-\ref{fig:speed_time_testperson_248} ikke har de samme afrundede og tydeligt distinkte kurver som figur \ref{fig:CrossmanFitt}, så stemmer vores data overens med Crossman og Goodeve's forklaring i \cite{crossman1983}. Vi har ydermere vist at fartprofilerne ofte udviser én eller flere korrigerende underbevægelser, hvilket også stemmer overens med \cite{crossman1983}. I modsætning hertil, så udviser hastighedsvektorerne ingen generelle tendenser og vi har ikke kunne bruge vektordataen til at beskrive eller forbedre Fitts' lov.
 
 % Diskussion af tunnel
 I vores analyse af tunnelopgaverne viste tabel \ref{tab:table_analysis_aic_tunnel_all} og \ref{tab:table_analysis_aic_tunnel_mean} at Meyer's formulering, da den havde den mindste AIC-værdi, på hhv. $20549.61$ og $33.68$. Det var dog ikke entydigt hvilken af formuleringerne som tilpassede dataen bedst, da både Accot \& Zhai's, MacKenzie's og Fitts' formulering havde AIC-værdier, hvor forskellen var under to. Derfor kan vi kun sige at de alle tilpasser dataen lige godt. Ved AIC-værdierne for gennemsnitstiderne er forskellen i mellem formuleringerne markant højere. Kun Accot \& Zhai's formulering har en forskel, der er mindre end 10, hvilket betyder, at de tre andre formuleringer ikke kan beskrive vores data i samme grad. Vores analyse viste også at Welford's formulering var den som beskrev vores data dårligst, da den havde den højeste AIC-værdi og forskellen var lige under ni. Vi kan altså ikke helt udelukke Welford's formulering og kan heller ikke sige hvilken formulering som beskriver vores data bedst.
