--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1149,7 +1149,7 @@ Da vores pegeopgaver er en reproducering af tidligere udførte forsøg i \cite{g
 Teorien om én primær underbevægelse efterfulgt af korrigerende underbevægelser, er som tidligere beskrevet, bekræftet af vores data. Selvom fartprofilerne vist i figur \ref{fig:speed_distance_testperson_140}-\ref{fig:speed_time_testperson_248} ikke har de samme afrundede og tydeligt distinkte kurver som figur \ref{fig:CrossmanFitt}, så stemmer vores data overens med Crossman og Goodeve's forklaring i \cite{crossman1983}. Vi har ydermere vist at fartprofilerne ofte udviser én eller flere korrigerende underbevægelser, hvilket også stemmer overens med \cite{crossman1983}. I modsætning hertil, så udviser hastighedsvektorerne ingen generelle tendenser og vi har ikke kunne bruge vektordataene til at beskrive eller forbedre Fitts' lov.
 
 % Diskussion af tunnel
-I vores analyse af tunnelopgaverne viste tabel \ref{tab:table_analysis_aic_tunnel_all} og \ref{tab:table_analysis_aic_tunnel_mean} at Meyer's formulering havde de mindste AIC-værdier, på henholdsvis $20549.61$ og $33.68$. Det var dog ikke entydigt hvilken af formuleringerne som tilpassede dataene bedst, da både Accot \& Zhai's, MacKenzie's og Fitts' formulering havde AIC-værdier, hvor forskellen var under to. Derfor kan vi kun sige at de alle tilpasser dataen lige godt. Ved AIC-værdierne for gennemsnitstiderne er forskellen i mellem formuleringerne markant højere. Kun Accot \& Zhai's formulering har en forskel, der er mindre end 10, hvilket betyder, at de tre andre formuleringer ikke kan beskrive vores data i samme grad. Vores analyse viste også at Welford's formulering var den som beskrev vores data dårligst, da den havde den højeste AIC-værdi og forskellen var lige under ni. Vi kan altså ikke helt udelukke Welford's formulering og kan heller ikke sige hvilken formulering som beskriver vores data bedst.
+I vores analyse af tunnelopgaverne viste tabel \ref{tab:table_analysis_aic_tunnel_all} og \ref{tab:table_analysis_aic_tunnel_mean} at Meyer's formulering havde de mindste AIC-værdier, på henholdsvis $20549.61$ og $33.68$. Det var dog ikke entydigt hvilken af formuleringerne som tilpassede dataene bedst, da både Accot \& Zhai's, MacKenzie's og Fitts' formulering havde AIC-værdier, hvor forskellen var under to. Derfor kan vi kun sige at de alle tilpasser dataene lige godt. Ved AIC-værdierne for gennemsnitstiderne er forskellen i mellem formuleringerne markant højere. Kun Accot \& Zhai's formulering har en forskel, der er mindre end 10, hvilket betyder, at de tre andre formuleringer ikke kan beskrive vores data i samme grad. Vores analyse viste også at Welford's formulering var den som beskrev vores data dårligst, da den havde den højeste AIC-værdi og forskellen var lige under ni. Vi kan altså ikke helt udelukke Welford's formulering og kan heller ikke sige hvilken formulering som beskriver vores data bedst.
 
 På forhånd havde vi forventet, at det ville være Accot og Zhai's formulering, som beskrev vores data bedst. Dette er dog ikke entydigt tilfældet, selvom de fire andre formuleringer ikke er beregnet til denne type opgaver. Dette kan skyldes flere ting, men specielt er det vigtigt at notere sig, at vores data til tunnelopgaverne ikke nødvendigvis er repræsentative. Vi har flere eksempler på personer, som fik bedre tider desto større $ID$, et eksempel herpå kan ses i figur \ref{fig:navigationtest2}. I forhold til \cite{accot1997} så har vi kun haft fire tunnelopgaver, mens de brugte 16. Dette fører til, at vi har et væsentlig mindre span af $ID$ og væsentlig mindre data at basere vores analyse på. Det er med til at gøre vores konklusion om tunnelopgaverne mindre pålidelige.
 
