--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1151,7 +1151,7 @@ Teorien om én primær underbevægelse efterfulgt af korrigerende underbevægels
 % Diskussion af tunnel
 I vores analyse af tunnelopgaverne viste tabel \ref{tab:table_analysis_aic_tunnel_all} og \ref{tab:table_analysis_aic_tunnel_mean} at Meyer's formulering havde de mindste AIC-værdier, på henholdsvis $20549.61$ og $33.68$. Det var dog ikke entydigt hvilken af formuleringerne som tilpassede dataene bedst, da både Accot \& Zhai's, MacKenzie's og Fitts' formulering havde AIC-værdier, hvor forskellen var under to. Derfor kan vi kun sige, at de alle tilpasser dataene lige godt. Ved AIC-værdierne for gennemsnitstiderne er forskellen imellem formuleringerne markant højere. Kun Accot \& Zhai's formulering har en forskel, der er mindre end 10, hvilket betyder, at de tre andre formuleringer ikke kan beskrive vores data i samme grad. Vores analyse viste også at Welford's formulering var den som beskrev vores data dårligst, da den havde den højeste AIC-værdi og forskellen var lige under ni. Vi kan altså ikke helt udelukke Welford's formulering og kan heller ikke sige hvilken formulering som beskriver vores data bedst.
 
-Vi havde på forhånd forventet, at det ville være Accot og Zhai's formulering, som beskrev vores data bedst. Dette er dog ikke entydigt tilfældet, selvom de fire andre formuleringer ikke er beregnet til denne type opgaver. Det kan skyldes flere ting, men specielt er det vigtigt at notere sig, at vores data til tunnelopgaverne ikke nødvendigvis er repræsentative. Vi har flere eksempler på personer, som fik bedre tider desto større $ID$, et eksempel herpå kan ses i figur \ref{fig:navigationtest2}. I forhold til \cite{accot1997} så har vi kun haft fire tunnelopgaver, mens de brugte 16. Dette fører til, at vi har et væsentligt mindre spænd af $ID$ og væsentligt mindre data at basere vores analyse på. Det er med til at gøre vores analyse om tunnelopgaverne mindre pålidelig.
+Vi havde på forhånd forventet, at det ville være Accot og Zhai's formulering, som beskrev vores data bedst. Dette er dog ikke entydigt tilfældet, selvom de fire andre formuleringer ikke er beregnet til denne type opgaver. Det kan skyldes flere ting, men specielt er det vigtigt at notere sig, at vores data til tunnelopgaverne ikke nødvendigvis er repræsentative. Vi har flere eksempler på personer, som fik bedre tider desto større $ID$, et eksempel herpå kan ses i figur \ref{fig:navigationtest2}. I forhold til \cite{accot1997} så har vi kun haft fire tunnelopgaver, mens de brugte 16. Dette fører til, at vi har et væsentligt mindre spænd af $ID$ og væsentligt mindre data at basere vores analyse på. Det er med til at gøre vores analyse af tunnelopgaverne mindre pålidelig.
 
 I forhold til Accot og Zhai så er der også stor forskel i vores modellers konstanter $a$ og $b$. De fandt frem til $a=-532$ og $b=93$, imens vores tilsvarende konstanter er $a=6112.4$ og $b=47.77$, forskellen skyldes formentligt antallet af opgaver og derved også antallet af forskellige $ID$, men derudover så burde vores forsøg være ens. Deres værdier er fra tilpasning til gennemsnitstiderne imens vores er til det fulde datasæt, vi har dog også fundet konstanterne til gennemsnitstiderne for vores datasæt, hvilket gav $a=6112.7$ og $b=47.77$, som er næsten identisk med vores allerede beskrevne værdier.
 
