--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1153,7 +1153,7 @@ I vores analyse af tunnelopgaverne viste tabel \ref{tab:table_analysis_aic_tunne
 
 Vi havde på forhånd forventet, at det ville være Accot og Zhai's formulering, som beskrev vores data bedst. Dette er dog ikke entydigt tilfældet, selvom de fire andre formuleringer ikke er beregnet til denne type opgaver. Det kan skyldes flere ting, men specielt er det vigtigt at notere sig, at vores data til tunnelopgaverne ikke nødvendigvis er repræsentative. Vi har flere eksempler på personer, som fik bedre tider desto større $ID$, et eksempel herpå kan ses i figur \ref{fig:navigationtest2}. I forhold til \cite{accot1997} så har vi kun haft fire tunnelopgaver, mens de brugte 16. Dette fører til, at vi har et væsentligt mindre spænd af $ID$ og væsentligt mindre data at basere vores analyse på. Det er med til at gøre vores analyse af tunnelopgaverne mindre pålidelig.
 
-I forhold til Accot og Zhai så er der også stor forskel i vores modellers konstanter $a$ og $b$. De fandt frem til $a=-532$ og $b=93$, imens vores tilsvarende konstanter er $a=6112.4$ og $b=47.77$, forskellen skyldes formentligt antallet af opgaver og derved også antallet af forskellige $ID$, men derudover så burde vores forsøg være ens. Deres værdier er fra tilpasning til gennemsnitstiderne imens vores er til det fulde datasæt, vi har dog også fundet konstanterne til gennemsnitstiderne for vores datasæt, hvilket gav $a=6112.7$ og $b=47.77$, som er næsten identisk med vores allerede beskrevne værdier.
+I forhold til Accot og Zhai så er der også stor forskel i vores modellers konstanter $a$ og $b$. De fandt frem til $a=-532$ og $b=93$, imens vores tilsvarende konstanter er $a=6112.4$ og $b=47.77$. Forskellen skyldes formentligt antallet af opgaver og derved også antallet af forskellige $ID$, men derudover så burde vores forsøg være ens. Deres værdier er fra tilpasning til gennemsnitstiderne imens vores er fra tilpasning til det fulde datasæt, vi har dog også fundet konstanterne til gennemsnitstiderne for vores datasæt, hvilket gav $a=6112.7$ og $b=47.77$, som er næsten identisk med vores allerede beskrevne værdier.
 
 \cite{accot1997} bruger gennemsnitstiderne til at udføre deres udregninger, hvilket vi har valgt ikke at gøre. Hvis vi havde valgt at gøre det, ville vi have haft fire datapunkter for tunnelopgaverne, hvilket er så få at $AIC$ ikke er beregnet til at sammenligne modellerne. I dette tilfælde kunne vi have brugt $AIC_c$, som er beregnet til at beregne AIC-værdier for datasæt, hvor antallet af datapunkter, $n$, er tilpas lille. Burnham argumenter i \cite{burnham2004} for, at hvis $\frac{n}{K} <\approx 40$ så bør $AIC_c$ bruges i stedet for $AIC$, i vores tilfælde har vi $n=4$ og $K=2 \vee 1$, hvilket giver værdier markant mindre end 40. Vi har dog valgt ikke at bruge $AIC_c$, men derimod gøre brug af hele vores datasæt.
 
