--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1155,7 +1155,7 @@ Vi havde på forhånd forventet, at det ville være Accot og Zhai's formulering,
 
 I forhold til Accot og Zhai så er der også stor forskel i vores modellers konstanter $a$ og $b$. De fandt frem til $a=-532$ og $b=93$, imens vores tilsvarende konstanter er $a=6112.4$ og $b=47.77$. Forskellen skyldes formentligt antallet af opgaver og derved også antallet af forskellige $ID$, men derudover så burde vores forsøg være ens. Deres værdier er fra tilpasning til gennemsnitstiderne imens vores er fra tilpasning til det fulde datasæt, vi har dog også fundet konstanterne til gennemsnitstiderne for vores gennemsnitstider, hvilket gav $a=6112.7$ og $b=47.77$, som er næsten identisk med vores allerede beskrevne værdier, for det fulde datasæt.
 
-\cite{accot1997} bruger gennemsnitstiderne til at udføre deres udregninger, hvilket vi har valgt ikke at gøre. Hvis vi havde valgt at gøre det, ville vi have haft fire datapunkter for tunnelopgaverne, hvilket er så få, at $AIC$ ikke er beregnet til at sammenligne modellerne. I dette tilfælde kunne vi have brugt $AIC_c$, som er tiltænkt til at beregne AIC-værdier for datasæt, hvor antallet af datapunkter, $n$, er tilpas lille. Burnham argumenter i \cite{burnham2004} for, at hvis $\frac{n}{K} <\approx 40$ så bør $AIC_c$ bruges i stedet for $AIC$, i vores tilfælde har vi $n=4$ og $K=2 \vee 1$, hvilket giver værdier markant mindre end 40. Vi har dog valgt ikke at bruge $AIC_c$, men derimod gøre brug af hele vores datasæt.
+\cite{accot1997} bruger gennemsnitstiderne til at udføre deres udregninger, hvilket vi har valgt ikke at gøre. Hvis vi havde valgt at gøre det, ville vi have haft fire datapunkter for tunnelopgaverne, hvilket er så få, at $AIC$ ikke er beregnet til at sammenligne modellerne. I dette tilfælde kunne vi have brugt $AIC_c$, som er tiltænkt at beregne AIC-værdier for datasæt, hvor antallet af datapunkter, $n$, er tilpas lille. Burnham argumenter i \cite{burnham2004} for, at hvis $\frac{n}{K} <\approx 40$ så bør $AIC_c$ bruges i stedet for $AIC$, i vores tilfælde har vi $n=4$ og $K=2 \vee 1$, hvilket giver værdier markant mindre end 40. Vi har dog valgt ikke at bruge $AIC_c$, men derimod gøre brug af hele vores datasæt.
 
 % Diskussion af spiral
 Modsat vores tunnelopgave analyse så viste spiralopgaverne store forskelle i mellem AIC-værdierne, vist i tabel \ref{tab:table_analysis_aic_spiral_all} og \ref{tab:table_analysis_aic_spiral_mean}. Accot og Zhai's formulering beskrev vores data bedst med AIC-værdier på $20225.67$ og $61.91$ for hhv. det fulde datasæt og gennemsnitstiderne. De indbyrdes 'placeringer' er ens for begge AIC-analyser, men ligesom for tunnelopgaverne så er der en væsentlig variation i forskellene. Vi vil dog tage udgangspunkt i AIC-analysen for det fulde datasæt, på baggrund af samme argument som for navigationsopgaverne.
