--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1158,7 +1158,7 @@ I forhold til Accot og Zhai så er der også stor forskel i vores modellers kons
 \cite{accot1997} bruger gennemsnitstiderne til at udføre deres udregninger, hvilket vi har valgt ikke at gøre. Hvis vi havde valgt at gøre det, ville vi have haft fire datapunkter for tunnelopgaverne, hvilket er så få, at $AIC$ ikke er beregnet til at sammenligne modellerne. I dette tilfælde kunne vi have brugt $AIC_c$, som er tiltænkt at beregne AIC-værdier for datasæt, hvor antallet af datapunkter, $n$, er tilpas lille. Burnham argumenter i \cite{burnham2004} for, at hvis $\frac{n}{K} <\approx 40$ så bør $AIC_c$ bruges i stedet for $AIC$. I vores tilfælde har vi $n=4$ og $K=2 \vee 1$, hvilket giver værdier markant mindre end 40. I og med, at vi ikke har brugt $AIC_c$, har vi valgt AIC-analysen for det fulde datasæt som vores endelige AIC-værdier
 
 % Diskussion af spiral
-Modsat vores tunnelopgaveanalyse så viste spiralopgaverne store forskelle i AIC-værdierne, vist i tabel \ref{tab:table_analysis_aic_spiral_all} og \ref{tab:table_analysis_aic_spiral_mean}. Accot og Zhai's formulering beskrev vores data bedst med AIC-værdier på $20225.67$ og $61.91$ for hhv. det fulde datasæt og gennemsnitstiderne. De indbyrdes 'placeringer' er ens for begge AIC-analyser, men ligesom for tunnelopgaverne så er der en væsentlig variation i forskellene. Vi vil dog tage udgangspunkt i AIC-analysen for det fulde datasæt, på baggrund af samme argument som for navigationsopgaverne.
+Modsat vores tunnelopgaveanalyse så viste spiralopgaverne store forskelle i AIC-værdierne, vist i tabel \ref{tab:table_analysis_aic_spiral_all} og \ref{tab:table_analysis_aic_spiral_mean}. Accot og Zhai's formulering beskrev vores data bedst med AIC-værdier på $20225.67$ og $61.91$ for henholdsvis det fulde datasæt og gennemsnitstiderne. De indbyrdes 'placeringer' er ens for begge AIC-analyser, men ligesom for tunnelopgaverne så er der en væsentlig variation i forskellene. Vi vil dog tage udgangspunkt i AIC-analysen for det fulde datasæt, på baggrund af samme argument som for navigationsopgaverne.
 
 Alle forskellene i tabel \ref{tab:table_analysis_aic_spiral_all} er større end 10, og vi kan derfor konkludere, at Accot og Zhai's formulering beskriver vores data bedre end de fire andre formuleringer. Dette er præcis, hvad vi forventede, da deres $ID$ er bestemt specifikt for denne type opgave. Ligesom for tunnelopgaverne gjorde vi kun brug af 4 i stedet for 16 opgaver, hvilket gør datasættet væsentligt mindre og måske endda for lille. I modsætning til tunnelopgaverne så har spiralopgavernes størrelser mere indflydelse på tiden. Hvis spiralen bliver større eller snævrere tager det længere tid for alle testdeltagerene at gennemføre. Sammenligningen med de fire originale formuleringer af Fitts' lov er dog svær at drage yderligere konklusioner ud fra. De motoriske analyser som de bygger på, med én hovedbevægelse efterfulgt af én eller flere underbevægelser er formentligt ikke tilfældet for spiralopgaven.
 
