--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1160,7 +1160,7 @@ I forhold til Accot og Zhai så er der også stor forskel i vores modellers kons
 % Diskussion af spiral
 Modsat vores tunnelopgaveanalyse så viste spiralopgaverne store forskelle i AIC-værdierne, vist i tabel \ref{tab:table_analysis_aic_spiral_all} og \ref{tab:table_analysis_aic_spiral_mean}. Accot og Zhai's formulering beskrev vores data bedst med AIC-værdier på $20225.67$ og $61.91$ for henholdsvis det fulde datasæt og gennemsnitstiderne. De indbyrdes 'placeringer' er ens for begge AIC-analyser, men lige som for tunnelopgaverne, er der en væsentlig variation i forskellene. Vi vil dog tage udgangspunkt i AIC-analysen for det fulde datasæt, på baggrund af samme argument som for navigationsopgaverne.
 
-Alle forskellene i tabel \ref{tab:table_analysis_aic_spiral_all} er større end 10, og vi kan derfor udlede, at Accot og Zhai's formulering beskriver vores data bedre end de fire andre formuleringer. Dette er præcis, hvad vi forventede, da deres $ID$ er bestemt specifikt for denne type opgave. Lige som for tunnelopgaverne gjorde vi kun brug af fire opgaver i stedet for 16, hvilket gør datasættet væsentligt mindre og måske endda for lille. I modsætning til tunnelopgaverne så har spiralopgavernes størrelser mere indflydelse på tiden. Hvis spiralen bliver større eller mere snæver tager det længere tid for alle testdeltagerene at gennemføre opgaven. Sammenligningen med de fire originale formuleringer af Fitts' lov er dog svær at drage yderligere konklusioner ud fra. De motoriske analyser som de bygger på, med én hovedbevægelse efterfulgt af én eller flere underbevægelser er formentligt ikke tilfældet for spiralopgaven.
+Alle forskellene i tabel \ref{tab:table_analysis_aic_spiral_all} er større end 10, og vi kan derfor udlede, at Accot og Zhai's formulering beskriver vores data bedre end de fire andre formuleringer. Dette er præcis, hvad vi forventede, da deres $ID$ er bestemt specifikt for denne type opgave. Lige som for tunnelopgaverne gjorde vi kun brug af fire opgaver i stedet for 16, hvilket gør datasættet væsentligt mindre og måske endda for lille. I modsætning til tunnelopgaverne så har spiralopgavernes størrelser mere indflydelse på tiden. Hvis spiralen bliver større eller mere snæver tager det længere tid for alle testdeltagerene at gennemføre opgaven. Sammenligningen med de fire originale formuleringer af Fitts' lov er dog svær at lave, da de motoriske analyser som de bygger på, med én hovedbevægelse efterfulgt af én eller flere underbevægelser er formentligt ikke tilfældet for spiralopgaven.
 
 I forhold til vores konstanter $a$ og $b$ og Accot og Zhai's, så er der igen en væsentlig forskel, de fik $a=115$ og $b=169$, imens vores værdier er på $a=2097.09$ og $b=553.25$. Det er svært at diskutere i yderlighed, hvad denne forskel betyder, da vi kun har brugt 4 spiralopgaver imens de brugte 16, og endvidere har vi heller ikke brugt den samme værdi, $w$, for bredden af spiraltunnellerne, dette skyldes, at vi ikke fik vores programmel til at tegne spiraller ved hjælp af polære koordinater ligesom Accot og Zhai har gjort det.
 
