--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1162,7 +1162,7 @@ Modsat vores tunnelopgaveanalyse så viste spiralopgaverne store forskelle i AIC
 
 Alle forskellene i tabel \ref{tab:table_analysis_aic_spiral_all} er større end 10, og vi kan derfor udlede, at Accot og Zhai's formulering beskriver vores data bedre end de fire andre formuleringer. Dette er præcis, hvad vi forventede, da deres $ID$ er bestemt specifikt for denne type opgave. Lige som for tunnelopgaverne gjorde vi kun brug af fire opgaver i stedet for 16, hvilket gør datasættet væsentligt mindre og måske endda for lille. I modsætning til tunnelopgaverne så har spiralopgavernes størrelser mere indflydelse på tiden. Hvis spiralen bliver større eller mere snæver tager det længere tid for alle testdeltagerene at gennemføre opgaven. Sammenligningen med de fire originale formuleringer af Fitts' lov er dog svær at lave, da de motoriske analyser, som de bygger på, med én hovedbevægelse efterfulgt af én eller flere underbevægelser, formentligt ikke gælder for spiralopgaven.
 
-Når vi kigger på konstanterne $a$ og $b$, er der igen en væsentlig forskel. De fandt frem til $a=115$ og $b=169$, imens vores værdier er på $a=2097.09$ og $b=553.25$. Det er svært at diskutere i yderlighed, hvad denne forskel betyder, da vi kun har brugt fire spiralopgaver imens de brugte 16, og endvidere har vi heller ikke brugt den samme værdi, $w$, for bredden af spiraltunnellerne, dette skyldes, at vi ikke fik vores programmel til at tegne spiraller ved hjælp af polære koordinater ligesom Accot og Zhai har gjort det.
+Når vi kigger på konstanterne $a$ og $b$, er der igen en væsentlig forskel. De fandt frem til $a=115$ og $b=169$, imens vores værdier er på $a=2097.09$ og $b=553.25$. Det er svært at diskutere, hvad denne forskel betyder, da vi kun har brugt fire spiralopgaver imens de brugte 16, og endvidere har vi heller ikke brugt den samme værdi, $w$, for bredden af spiraltunnellerne, dette skyldes, at vi ikke fik vores programmel til at tegne spiraller ved hjælp af polære koordinater ligesom Accot og Zhai har gjort det.
 
 \addcontentsline{toc}{chapter}{Konklusion}
 \chapter*{Konklusion}
