--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1172,7 +1172,7 @@ Vi kan på baggrund af denne analyse konkludere, at Meyer's formulering beskrive
 
 \addcontentsline{toc}{section}{Fremtidigt arbejde}
 \section*{Fremtidigt arbejde}
-Ved videre udarbejdelse af projektet, kan det være interessant at foretage en mere dybdegående analyse af hastighedsprofilerne. Ved at studere flere af testdeltagernes tilhørende vektorplots kunne der have været større grobund for at se en sammenhæng imellem dem og Fitts' lov. Endvidere ville vi gerne have haft mulighed for at sammenligne testdeltagernes tider i forhold til flere af deres spørgeskemasvar, såsom forskel på mænd og kvinder, højre eller venstre hånd og så videre.
+Ved videre udarbejdelse af projektet, kan det være interessant at foretage en mere dybdegående analyse af hastighedsprofilerne. Ved at studere flere af testdeltagernes vektorplots kunne der have været større grobund for at se en sammenhæng imellem dem og Fitts' lov. Endvidere ville vi gerne have haft mulighed for at sammenligne testdeltagernes tider i forhold til flere af deres spørgeskemasvar, såsom forskel på mænd og kvinder, højre eller venstre hånd og så videre.
 
 I forhold til tunnel og spiralopgaverne ville det være naturligt at tilføje flere af denne type opgaver, for bedre at kunne undersøge om Accot og Zhai's formuleringer rent faktisk stemmer bedre overens med denne type opgaver i forhold til Fitts' lov. Hertil kunne man også godt kigge på fart og hastighedsprofiler. Blandt andet formoder vi, at navigationsopgaver har flere primære underbevægelser i stedet for kun én, hvilket går imod teorien bag de klassiske formuleringer af Fitts' lov.
 
