--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1176,7 +1176,7 @@ Ved videre udarbejdelse af projektet, kan det være interessant at foretage en m
 
 I forhold til tunnel- og spiralopgaverne vil det være naturligt at tilføje flere af denne type opgaver. For bedre at kunne undersøge om Accot og Zhai's formuleringer rent faktisk stemmer bedre overens med denne type opgaver i forhold til Fitts' lov. Hertil kunne man også kigge på fart og hastighedsprofiler. Blandt andet formoder vi, at navigationsopgaver har flere primære underbevægelser i stedet for én enkelt, hvilket går imod teorien bag de klassiske formuleringer af Fitts' lov.
 
-Med den teknologiske udvikling kunne det også være relevant at undersøge Fitts' lov i forhold til skærme med 'motion sensors'. Nærmere betegnet om forholdet imellem tiden det tager at udføre opgaven og sværhedsgraden af opgaven er det samme når man er fri for at bruge en pegeenhed eller røre ved skærmen.
+Med den teknologiske udvikling kan det også være relevant at undersøge Fitts' lov i forhold til skærme med 'motion sensors'. Nærmere betegnet om forholdet imellem tiden det tager at udføre opgaven og sværhedsgraden af opgaven er det samme når man er fri for at bruge en pegeenhed eller røre ved en skærm.
 
 %\textbf{Konklusionen er afslutningen på din akademiske opgave. Her fortæller du din læser hvad du har fundet ud af i din undersøgelse/analyse, og hvorfor det er vigtigt.}
 %Konklusionen kan indeholde:
