--- a/latex/appendices.tex
+++ b/latex/appendices.tex
@@ -331,42 +331,42 @@ For at crowdsource vores eksperiment har vi delt følgende tekst:
 \label{sec:velocity_plots}
 \begin{minipage}{\textwidth}
 	\includegraphics[width=\linewidth]{images/plots/plot_velocity_individual_45}
-	\captionof{figure}{Hastighedsprofiler for testdeltager 45's opgave 20,23,8 og 20. $x$ og $y$ koordinaterne er de præcise punkter på skærmen fra opgaverne.}
+	\captionof{figure}{Hastighedsprofiler for testdeltager 45's opgave 20,23,8 og 20. $x$ og $y$ koordinaterne er de præcise punkter på skærmen fra opgaverne}
 \end{minipage}
 \newpage
 \begin{minipage}{\textwidth}
 	\includegraphics[width=\linewidth]{images/plots/plot_velocity_individual_140}
-	\captionof{figure}{Hastighedsprofiler for testdeltager 140's opgave 20,23,8 og 20. $x$ og $y$ koordinaterne er de præcise punkter på skærmen fra opgaverne.}
+	\captionof{figure}{Hastighedsprofiler for testdeltager 140's opgave 20,23,8 og 20. $x$ og $y$ koordinaterne er de præcise punkter på skærmen fra opgaverne}
 \end{minipage}
 \newpage
 \begin{minipage}{\textwidth}
 	\includegraphics[width=\linewidth]{images/plots/plot_velocity_individual_161}
-	\captionof{figure}{Hastighedsprofiler for testdeltager 161's opgave 20,23,8 og 20. $x$ og $y$ koordinaterne er de præcise punkter på skærmen fra opgaverne.}
+	\captionof{figure}{Hastighedsprofiler for testdeltager 161's opgave 20,23,8 og 20. $x$ og $y$ koordinaterne er de præcise punkter på skærmen fra opgaverne}
 \end{minipage}
 \newpage
 \begin{minipage}{\textwidth}
 	\includegraphics[width=\linewidth]{images/plots/plot_velocity_individual_166}
-	\captionof{figure}{Hastighedsprofiler for testdeltager 166's opgave 20,23,8 og 20. $x$ og $y$ koordinaterne er de præcise punkter på skærmen fra opgaverne.}
+	\captionof{figure}{Hastighedsprofiler for testdeltager 166's opgave 20,23,8 og 20. $x$ og $y$ koordinaterne er de præcise punkter på skærmen fra opgaverne}
 \end{minipage}
 \newpage
 \begin{minipage}{\textwidth}
 	\includegraphics[width=\linewidth]{images/plots/plot_velocity_individual_target_45}
-	\captionof{figure}{Hastighedsprofiler for testdeltager 45's opgave 20,23,8 og 20. Vektorerne peger imod målet, og $x$ og $y$ koordinaterne er de præcise punkter på skærmen fra opgaverne.}
+	\captionof{figure}{Hastighedsprofiler for testdeltager 45's opgave 20,23,8 og 20. Vektorerne peger imod målet, og $x$ og $y$ koordinaterne er de præcise punkter på skærmen fra opgaverne}
 \end{minipage}
 \newpage
 \begin{minipage}{\textwidth}
 	\includegraphics[width=\linewidth]{images/plots/plot_velocity_individual_target_140}
-	\captionof{figure}{Hastighedsprofiler for testdeltager 140's opgave 20,23,8 og 20. Vektorerne peger imod målet, og $x$ og $y$ koordinaterne er de præcise punkter på skærmen fra opgaverne.}
+	\captionof{figure}{Hastighedsprofiler for testdeltager 140's opgave 20,23,8 og 20. Vektorerne peger imod målet, og $x$ og $y$ koordinaterne er de præcise punkter på skærmen fra opgaverne}
 \end{minipage}
 \newpage
 \begin{minipage}{\textwidth}
 	\includegraphics[width=\linewidth]{images/plots/plot_velocity_individual_target_161}
-	\captionof{figure}{Hastighedsprofiler for testdeltager 161's opgave 20,23,8 og 20. Vektorerne peger imod målet, og $x$ og $y$ koordinaterne er de præcise punkter på skærmen fra opgaverne.}
+	\captionof{figure}{Hastighedsprofiler for testdeltager 161's opgave 20,23,8 og 20. Vektorerne peger imod målet, og $x$ og $y$ koordinaterne er de præcise punkter på skærmen fra opgaverne}
 \end{minipage}
 \newpage
 \begin{minipage}{\textwidth}
 	\includegraphics[width=\linewidth]{images/plots/plot_velocity_individual_target_166}
-	\captionof{figure}{Hastighedsprofiler for testdeltager 166's opgave 20,23,8 og 20. Vektorerne peger imod målet, og $x$ og $y$ koordinaterne er de præcise punkter på skærmen fra opgaverne.}
+	\captionof{figure}{Hastighedsprofiler for testdeltager 166's opgave 20,23,8 og 20. Vektorerne peger imod målet, og $x$ og $y$ koordinaterne er de præcise punkter på skærmen fra opgaverne}
 \end{minipage}
 
 \end{appendices}
