--- a/latex/main.tex
+++ b/latex/main.tex
@@ -961,7 +961,7 @@ Ligesom for vores tunnelopgaver har vi valgt at visualisere de fem modellers til
 \end{minipage}
 
 \newpage
-\addcontentsline{toc}{section}{modelanalyse af hastighedsprofiler}
+\addcontentsline{toc}{section}{Modelanalyse af hastighedsprofiler}
 \section*{Modelanalyse af hastighedsprofiler}
 Vores modelanalyse af hastighedsprofiler tager udgangspunkt i en kvalitativ analyse. Vi vil gennemgå testdeltagernes bevægelsesbaner for pegeopgaverne, for at finde eventuelle tendenser, som vi kan opstille hypoteser ud fra. Hypoteserne vil vi forsøge, at be- eller afkræfte i en efterfølgende kvantitativ analyse.
 
