--- a/latex/appendices.tex
+++ b/latex/appendices.tex
@@ -242,7 +242,7 @@ For at crowdsource vores eksperiment har vi delt følgende tekst:
 \end{minipage}
 
 %-- Fartprofiler --%
-\chapter{Fartprofiler for 8 testdeltagere}
+\chapter{Fartprofiler for otte testdeltagere}
 \label{sec:speed_plots}
 \begin{minipage}{\textwidth}
 	\begin{minipage}{0.5\linewidth}
@@ -327,7 +327,7 @@ For at crowdsource vores eksperiment har vi delt følgende tekst:
 \end{minipage}
 
 %-- Hastighedsprofiler --%
-\chapter{Hastighedsprofiler for 4 testdeltagere}
+\chapter{Hastighedsprofiler for fire testdeltagere}
 \label{sec:velocity_plots}
 \begin{minipage}{\textwidth}
 	\includegraphics[width=\linewidth]{images/plots/plot_velocity_individual_45}
