--- a/latex/main.tex
+++ b/latex/main.tex
@@ -75,8 +75,7 @@ Testdeltagerne, 16 højrehåndede mandlige universitetsstuderende, fik 15 sekund
 \subsection*{Eksperiment 2: \textit{Disc Transfer}}
 I dette eksperiment brugte Fitts to pinde, og otte runde plader. De otte runde plader havde et hul i midten, som kunne antage fire forskellige størrelser - dog havde alle otte plader den samme hulstørrelse, i hver enkel opgave. De to pinde skulle ligesom i eksperiment 1 være placeret med fire forskellige afstande imellem sig. 
 
-Hver af de 16 forsøgsmuligheder blev i tilfældig rækkefølge udført af 16 højrehåndede mandlige universitetsstuderende. Figur \ref{fig:FittsEx2} viser, hvordan eksperimentet blev udført.
-
+Hver af de 16 forsøgsmuligheder blev i tilfældig rækkefølge udført af 16 højrehåndede mandlige universitetsstuderende. Figur \ref{fig:FittsEx2} viser, hvordan eksperimentet blev udført.\\\\
 \begin{minipage}[c]{\linewidth}
 	\begin{minipage}[b]{.45\linewidth}
 		\includegraphics[width=\textwidth]{images/illustrations/fitt_ex1}
