--- a/latex/main.tex
+++ b/latex/main.tex
@@ -714,22 +714,22 @@ Det ses af figur \ref{fig:plot_residual_welford}, at Welford's især er dårlige
 
 \begin{minipage}{\linewidth}
 	\begin{minipage}{.5\linewidth}
-		\includegraphics[width=\linewidth]{images/plots/plot_residual_fitt}
+		\includegraphics[width=0.8\linewidth]{images/plots/plot_residual_fitt}
 		\captionof{figure}{Fitts' residualplot}
 		\label{fig:plot_residual_fitt}
 	\end{minipage}
 	\begin{minipage}{.5\linewidth}
-		\includegraphics[width=\linewidth]{images/plots/plot_residual_welford}
+		\includegraphics[width=0.8\linewidth]{images/plots/plot_residual_welford}
 		\captionof{figure}{Welford's residualplot}
 		\label{fig:plot_residual_welford}
 	\end{minipage}
 	\begin{minipage}{.5\linewidth}
-		\includegraphics[width=\linewidth]{images/plots/plot_residual_mackenzie}
+		\includegraphics[width=0.8\linewidth]{images/plots/plot_residual_mackenzie}
 		\captionof{figure}{MacKenzie's residualplot}
 		\label{fig:plot_residual_mackenzie}
 	\end{minipage}
 	\begin{minipage}{.5\linewidth}
-		\includegraphics[width=\linewidth]{images/plots/plot_residual_meyer}
+		\includegraphics[width=0.8\linewidth]{images/plots/plot_residual_meyer}
 		\captionof{figure}{Meyer's residualplot}
 		\label{fig:plot_residual_meyer}
 	\end{minipage}
